Fixed overlaped navbar in mobile screen

--- a/styles.css
+++ b/styles.css
@@ -1383,6 +1383,7 @@ body {
 }
 
 .mobile-menu ul li {
+  margin-top: 2rem;
   margin-bottom: 2rem;
 }
 
